# OpenCV-Face-Recognition

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  OpenCV-Face-Recognition.cpp  OpenCV-Face-Recognition.h  config.json  с.txt
inc/: OpenCV-Face-Recognition.h
src/: OpenCV-Face-Recognition.cpp  databaseInteraction.cpp  getFrameNumber.cpp  logsGeneration.cpp  processingPictures.cpp
